--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.3",
-    "react-input-mask": "^3.0.0-alpha.2",
+    "react-input-mask": "^2.0.4",
+    "react-number-format": "^4.9.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4",
