--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "chart.js": "^3.7.0",
+    "faker": "^5.5.3",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.3",
     "react-input-mask": "^2.0.4",
