Adicionado projeto api-fake ao docker-componse

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/simulador-eqi/node_modules
+/desafio-fake-api/node_modules
 /.pnp
 .pnp.js
 
@@ -21,7 +23,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-.dockerignore
-Dockerfile
-Dockerfile.prod
